[gd_scene load_steps=8 format=2]

[ext_resource path="res://Nodes/Ui/arrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UI/MapScreen/MapArrows.gd" type="Script" id=2]
[ext_resource path="res://Graphics/UI/Inventory/cursor.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="MapArrows" type="Node2D"]
script = ExtResource( 2 )

[node name="arrowR" parent="." instance=ExtResource( 1 )]
position = Vector2( 310, 90 )
frames = SubResource( 4 )

[node name="arrowL" parent="." instance=ExtResource( 1 )]
position = Vector2( 10, 90 )
rotation = -3.14159
frames = SubResource( 4 )

[node name="arrowU" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 10 )
rotation = -1.5708
frames = SubResource( 4 )

[node name="arrowD" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 170 )
rotation = 1.5708
frames = SubResource( 4 )
